<resources>
    <string name="app_name">SunnyWeather</string>
    <string name="input_address">输入城市</string>
    <string name="location_address">%s&#160;&#160;%s&#160;&#160;%s</string>
    <string name="location_name">维多利亚港维多利亚港维多利亚港维多利亚港维多利亚港</string>
    <string name="delimiter">|</string>
    <string name="current_temp">22℃</string>
    <string name="current_weather">多云</string>
    <string name="feels_like">18°</string>
    <string name="humidity">70%</string>
    <string name="wind_dir">东南风</string>
    <string name="wind_scale">1–2级</string>
    <string name="weather_forecast">天气预报</string>
    <string name="forecast_date">2020–02–02</string>
    <string name="forecast_weather">白天晴 夜间多云</string>
    <string name="forecast_temp">10/-10℃</string>
    <string name="forecast_humidity">湿度</string>
    <string name="date">日期</string>
    <string name="weather">天气</string>
    <string name="temp">温度</string>
    <string name="real_time_temp">%s℃</string>
    <string name="real_time_feels_like">%s°</string>
    <string name="real_time_humidity">%s\%</string>
    <string name="real_time_wind_scale">%s级</string>
    <string name="weather_info">白天%s&#160;夜间%s</string>
    <string name="temperature_info">%s/%s℃</string>
</resources>